# jobsearch-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
jobagent/: __init__.py  config.py  config.yaml  context.py  http.py  models.py  pipeline.py  plugins.py  registry.py  run.py  textutil.py
jobagent/backends/: __init__.py  embeddings.py  llm.py
jobagent/delivery/: __init__.py  console.py  email.py  jsonfile.py  markdown.py  render.py  slack.py
jobagent/enrichers/: __init__.py  embedding_ranker.py  extract.py  keyword_filter.py  llm_scorer.py  salary.py  sponsorship.py
jobagent/sources/: __init__.py  ashby.py  browser.py  fetch.py  greenhouse.py  lever.py
jobagent/storage/: __init__.py  db.py  dedup.py
profile/: portfolio.example.md  resume.example.md
tests/: conftest.py  test_enrichers.py  test_markdown_delivery.py  test_pipeline.py  test_run_end_to_end.py  test_sources_storage.py  test_textutil.py
