[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsearch-agent"
version = "0.1.0"
description = "Personal daily job-hunting agent: fetch, rank, score, deliver."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
jobagent = "jobagent.run:main"

[tool.setuptools.packages.find]
include = ["jobagent*"]

[tool.setuptools.package-data]
jobagent = ["config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
